--- a/src/components/Layout/Toolbar/Toolbar.module.css
+++ b/src/components/Layout/Toolbar/Toolbar.module.css
@@ -14,11 +14,22 @@ li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px;
     text-decoration: none;
 }
 
 /* Change the link color to #111 (black) on hover */
 li a:hover {
     background-color: #111;
+}
+
+.Logo {
+    width: 200;
+}
+
+.Logo img {
+    padding-left: 10px;
+    padding-top: 7px;
+    height: auto;
+    width: 200px;
 }
