--- a/src/components/Layout/CreateRecipe/RecipeHeaderForm/IngredientControls/IngredientControls.module.css
+++ b/src/components/Layout/CreateRecipe/RecipeHeaderForm/IngredientControls/IngredientControls.module.css
@@ -1,6 +1,6 @@
 .IngredientControls {
     width: 100%;
-    background-color: #cf8f2e;
+    background-color: #111;
     display: flex;
     flex-flow: column;
     align-items: center;
