--- a/src/components/CreateRecipe/InstructionControls/InstructionControls.module.css
+++ b/src/components/CreateRecipe/InstructionControls/InstructionControls.module.css
@@ -1,6 +1,5 @@
-.IngredientControls {
+.InstructionControls {
 	width: 100%;
-	background-color: #111;
 	display: flex;
 	flex-flow: column;
 	align-items: center;
