--- a/src/components/UI/Control/Control.module.css
+++ b/src/components/UI/Control/Control.module.css
@@ -1,11 +1,11 @@
-.IngredientControl {
+.Control {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	margin: 5px 0;
 }
 
-.IngredientControl button {
+.Control button {
 	display: block;
 	font: inherit;
 	padding: 5px;
@@ -16,14 +16,14 @@
 	outline: none;
 }
 
-.IngredientControl button:disabled {
+.Control button:disabled {
 	background-color: grey;
 	border: 1px solid #7e7365;
 	color: #ccc;
 	cursor: default;
 }
 
-.IngredientControl button:hover:disabled {
+.Control button:hover:disabled {
 	background-color: grey;
 	color: #ccc;
 	cursor: not-allowed;
@@ -32,28 +32,38 @@
 .Label {
 	padding: 10px;
 	font-weight: bold;
-	color: #ccc;
 	width: 80px;
 }
 
-.IngredientControl .Less {
+.Control .Less {
 	background-color: grey;
 	color: white;
 }
 
-.IngredientControl .More {
+.Control .More {
 	background-color: darkgray;
 	color: white;
 }
 
-.IngredientControl .Less:hover,
-.IngredientControl .Less:active {
+.Control .Edit {
+	background-color: orange;
+	color: white;
+}
+
+.Control .Less:hover,
+.Control .Less:active {
 	background-color: darkgray;
 	color: white;
 }
 
-.IngredientControl .More:hover,
-.IngredientControl .More:active {
+.Control .More:hover,
+.Control .More:active {
 	background-color: grey;
+	color: white;
+}
+
+.Control .Edit:hover,
+.Control .Edit:active {
+	background-color: darkorange;
 	color: white;
 }
